--- a/public/index.html
+++ b/public/index.html
@@ -1,25 +1,22 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="utf-8" />
-    <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <meta name="theme-color" content="#f4f4f4" />
-    <meta
-      name="keywords"
-      content="technology, software development, IT consulting, cloud computing, artificial intelligence, machine learning, cybersecurity, data analytics, digital transformation, EDITSH Technology"
-    />
-    <meta
-      name="description"
-      content="EDITSH Technology is a leading provider of innovative technological solutions, specializing in software development, IT consulting, and digital transformation services. Our mission is to empower businesses with cutting-edge technology that drives growth and efficiency. We offer a range of services including cloud computing, artificial intelligence, machine learning, cybersecurity, and data analytics. At EDITSH Technology, we are committed to delivering high-quality, tailored solutions that meet the unique needs of our clients."
-    />
-    <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
-    <!--
+
+<head>
+  <meta charset="utf-8" />
+  <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <meta name="theme-color" content="#f4f4f4" />
+  <meta name="keywords"
+    content="technology, software development, IT consulting, cloud computing, artificial intelligence, machine learning, cybersecurity, data analytics, digital transformation, EDITSH Technology" />
+  <meta name="description"
+    content="EDITSH Technology is a leading provider of innovative technological solutions, specializing in software development, IT consulting, and digital transformation services. Our mission is to empower businesses with cutting-edge technology that drives growth and efficiency. We offer a range of services including cloud computing, artificial intelligence, machine learning, cybersecurity, and data analytics. At EDITSH Technology, we are committed to delivering high-quality, tailored solutions that meet the unique needs of our clients." />
+  <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
+  <!--
       manifest.json provides metadata used when your web app is installed on a
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
     -->
-    <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-    <!--
+  <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
+  <!--
       Notice the use of %PUBLIC_URL% in the tags above.
       It will be replaced with the URL of the `public` folder during the build.
       Only files inside the `public` folder can be referenced from the HTML.
@@ -28,14 +25,15 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>E.D.I.T.S.H</title>
-    <!-- Aos Animation -->
-    <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
-  </head>
-  <body>
-    <noscript>You need to enable JavaScript to run this app.</noscript>
-    <div id="root"></div>
-    <!--
+  <title>E.D.I.T.S.H</title>
+  <!-- Aos Animation -->
+  <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
+</head>
+
+<body>
+  <noscript>You need to enable JavaScript to run this app.</noscript>
+  <div id="root"></div>
+  <!--
       This HTML file is a template.
       If you open it directly in the browser, you will see an empty page.
 
@@ -45,10 +43,13 @@
       To begin the development, run `npm start` or `yarn start`.
       To create a production bundle, use `npm run build` or `yarn build`.
     -->
-    <!-- Aos Animation -->
-    <script src="https://unpkg.com/aos@2.3.4/dist/aos.js"></script>
-    <script>
-      AOS.init();
-    </script>
-  </body>
+  <!-- Aos Animation -->
+  <script src="https://unpkg.com/aos@2.3.4/dist/aos.js"></script>
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
+
+  <script>
+    AOS.init();
+  </script>
+</body>
+
 </html>
